--- a/Wednesday/lesson_4/package.json
+++ b/Wednesday/lesson_4/package.json
@@ -30,7 +30,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "jest:integration": "jest -c integration/jest.config.js",
+    "test:integration": "start-server-and-test storybook http-get://localhost:6006 jest:integration",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -40,16 +41,6 @@
       "react-app",
       "react-app/jest",
       "plugin:storybook/recommended"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
     ]
   },
   "browserslist": {
@@ -65,22 +56,24 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^7.0.21",
-    "@storybook/addon-essentials": "^7.0.21",
-    "@storybook/addon-interactions": "^7.0.21",
-    "@storybook/addon-links": "^7.0.21",
-    "@storybook/blocks": "7.0.21",
-    "@storybook/builder-webpack5": "^7.0.21",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/node-logger": "^7.0.21",
-    "@storybook/preset-create-react-app": "^7.0.21",
-    "@storybook/react": "^7.0.21",
-    "@storybook/react-webpack5": "7.0.21",
-    "@storybook/testing-library": "^0.1.0",
-    "babel-plugin-named-exports-order": "^0.0.2",
+    "@storybook/addon-essentials": "7.0.22",
+    "@storybook/addon-interactions": "7.0.22",
+    "@storybook/addon-links": "7.0.22",
+    "@storybook/blocks": "7.0.22",
+    "@storybook/preset-create-react-app": "7.0.22",
+    "@storybook/react": "7.0.22",
+    "@storybook/react-webpack5": "7.0.22",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "babel-plugin-named-exports-order": "0.0.2",
     "eslint-plugin-storybook": "^0.6.12",
-    "prop-types": "^15.8.1",
-    "storybook": "7.0.21",
-    "webpack": "^5.87.0"
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-image-snapshot": "^6.1.0",
+    "jest-puppeteer": "^9.0.0",
+    "prop-types": "15.8.1",
+    "puppeteer": "^20.7.2",
+    "start-server-and-test": "^2.0.0",
+    "storybook": "7.0.22",
+    "webpack": "5.87.0"
   }
 }
